--- a/.github/workflows/unittest.yml
+++ b/.github/workflows/unittest.yml
@@ -53,10 +53,14 @@ jobs:
             ./prof.db
       - name: Upload coverage
         id : codecov
-        uses: codecov/codecov-action@v3
+        uses: Wandalen/wretry.action@v1.0.36
         with:
-          token: ${{ secrets.CODECOV_TOKEN }} # maybe needed to avoid upload failure?
-          name: codecov-umbrella # optional
-          files: ./cov.xml
-          fail_ci_if_error: true # optional (default = false)
-          verbose: true # optional (default = false)
+          action: codecov/codecov-action@v3
+          with: |
+            token: ${{ secrets.CODECOV_TOKEN }} # maybe needed to avoid upload failure?
+            name: codecov-umbrella # optional
+            files: ./cov.xml
+            fail_ci_if_error: true # optional (default = false)
+            verbose: true # optional (default = false)
+          attempt_limit: 10
+          attempt_delay: 60000 # ms, 1 min
