--- a/requirements_conda.yml
+++ b/requirements_conda.yml
@@ -8,7 +8,7 @@ dependencies:
   - netcdf4 >= 1.5.4
   - numpy >= 1.20.0, < 1.25.0
   - psutil
-  - scipy >= 1.5.0
+  - scipy >= 1.5.0, < 1.11.0
   - termcolor
   - pip
   - pip:
