Turn warnings into errors in pytest

--- a/setup.cfg
+++ b/setup.cfg
@@ -44,6 +44,8 @@ markers=
 	solve: marks tests that rely solving an equilibrium
 	slow: marks tests as slow (deselect with 'pytest -m "not slow"').
 	fast: mark tests as fast.
+filterwarnings=
+    error
 
 [flake8]
 # Primarily ignoring whitespace, indentation, and commenting etiquette that black does not catch
