Ignore warnings from nbmake

--- a/setup.cfg
+++ b/setup.cfg
@@ -46,6 +46,7 @@ markers=
 	fast: mark tests as fast.
 filterwarnings=
     error
+    ignore::pytest.PytestUnraisableExceptionWarning
 
 [flake8]
 # Primarily ignoring whitespace, indentation, and commenting etiquette that black does not catch
