Ignore division by zero warnings in compute funs

--- a/setup.cfg
+++ b/setup.cfg
@@ -47,6 +47,8 @@ markers=
 filterwarnings=
     error
     ignore::pytest.PytestUnraisableExceptionWarning
+    ignore::RuntimeWarning:desc.compute
+    # Ignore division by zero warnings.
 
 [flake8]
 # Primarily ignoring whitespace, indentation, and commenting etiquette that black does not catch
