--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
 colorama
+diffrax
 h5py >= 3.0.0
-jax[cpu] >= 0.3.2, <= 0.4.11
+jax[cpu] >= 0.4.1, <= 0.4.11
 matplotlib >= 3.3.0, <= 3.6.0, != 3.4.3
+ml_dtypes<0.2.0
 mpmath >= 1.0.0
 netcdf4 >= 1.5.4
 numpy >= 1.20.0, < 1.25.0
@@ -9,4 +11,3 @@ nvgpu
 psutil
 scipy >= 1.5.0, < 1.11.0
 termcolor
-diffrax<=0.4.0
