add NaN check (not working currently) and ignore RuntimeWarnings (from netCDF4 but cannot only target that module)

--- a/setup.cfg
+++ b/setup.cfg
@@ -49,6 +49,9 @@ filterwarnings=
     ignore::pytest.PytestUnraisableExceptionWarning
     ignore::RuntimeWarning:desc.compute
     # Ignore division by zero warnings.
+    ignore::RuntimeWarning
+
+
 
 [flake8]
 # Primarily ignoring whitespace, indentation, and commenting etiquette that black does not catch
