change ignore to only catch the bening ndarray size change warning (if it is not benign, Cython would raise a ValueError, not a RuntimeWarning), and add kwrgs to integrate function

--- a/setup.cfg
+++ b/setup.cfg
@@ -49,7 +49,7 @@ filterwarnings=
     ignore::pytest.PytestUnraisableExceptionWarning
     ignore::RuntimeWarning:desc.compute
     # Ignore division by zero warnings.
-    ignore::RuntimeWarning
+    ignore:numpy.ndarray size changed:RuntimeWarning
 
 
 
