--- a/setup.cfg
+++ b/setup.cfg
@@ -49,6 +49,7 @@ filterwarnings=
     ignore::pytest.PytestUnraisableExceptionWarning
     ignore::RuntimeWarning:desc.compute
     # Ignore division by zero warnings.
+    ignore::DeprecationWarning:ml_dtypes.*
 
 [flake8]
 # Primarily ignoring whitespace, indentation, and commenting etiquette that black does not catch
