add min stepsize (NaN event works now but compile time takes ages on diffrax's part), undo accidental ml_dtypes change, add ignore for benign equinox warning

--- a/setup.cfg
+++ b/setup.cfg
@@ -53,6 +53,7 @@ filterwarnings=
     # ignore benign Cython warnings on ndarray size
     ignore::DeprecationWarning:ml_dtypes.*
     # ignore benign ml_dtypes DeprecationWarning
+    ignore:As of Equinox 0.10.7, `equinox.filter_custom_vjp.defvjp`: UserWarning
 
 [flake8]
 # Primarily ignoring whitespace, indentation, and commenting etiquette that black does not catch
