add ignore, reduce test tol

--- a/setup.cfg
+++ b/setup.cfg
@@ -49,7 +49,10 @@ filterwarnings=
     ignore::pytest.PytestUnraisableExceptionWarning
     ignore::RuntimeWarning:desc.compute
     # Ignore division by zero warnings.
+    ignore:numpy.ndarray size changed:RuntimeWarning
+    # ignore benign Cython warnings on ndarray size
     ignore::DeprecationWarning:ml_dtypes.*
+    # ignore benign ml_dtypes DeprecationWarning
 
 [flake8]
 # Primarily ignoring whitespace, indentation, and commenting etiquette that black does not catch
