fix bug in QSBoozer

--- a/setup.cfg
+++ b/setup.cfg
@@ -47,7 +47,7 @@ markers=
 filterwarnings=
     error
     ignore::pytest.PytestUnraisableExceptionWarning
-    ignore::RuntimeWarning:desc.compute
+    ignore::RuntimeWarning
     # Ignore division by zero warnings.
     ignore::DeprecationWarning:ml_dtypes.*
 
