add regcoil test for regcoiil and field trace from curr pot

--- a/setup.cfg
+++ b/setup.cfg
@@ -47,9 +47,9 @@ markers=
 filterwarnings=
     error
     ignore::pytest.PytestUnraisableExceptionWarning
-    ignore::RuntimeWarning:desc.compute
+    ignore::RuntimeWarning
     # Ignore division by zero warnings.
-
+    ignore::UserWarning
 [flake8]
 # Primarily ignoring whitespace, indentation, and commenting etiquette that black does not catch
 # These will be fixed in a code-cleaning branch in the future
