--- a/.github/workflows/unittest.yml
+++ b/.github/workflows/unittest.yml
@@ -37,6 +37,10 @@ jobs:
           python -m pip install --upgrade pip
           pip install -r devtools/dev-requirements.txt
           pip install matplotlib==3.5.0
+      - name: Set Swap Space
+        uses: pierotofy/set-swap-space@master
+        with:
+          swap-size-gb: 10
       - name: Test with pytest
         run: |
           pwd
