--- a/devtools/dev-requirements_conda.yml
+++ b/devtools/dev-requirements_conda.yml
@@ -22,6 +22,7 @@ dependencies:
 
   # building the docs
   - nbsphinx > 0.8.5
+  - pandoc
   - sphinx > 3.0.0
   - sphinx-argparse
   - sphinx-copybutton
