--- a/setup.cfg
+++ b/setup.cfg
@@ -47,7 +47,7 @@ markers=
 filterwarnings=
     error
     ignore::pytest.PytestUnraisableExceptionWarning
-    ignore::RuntimeWarning
+    ignore::RuntimeWarning:desc.compute
     # Ignore division by zero warnings.
     ignore:numpy.ndarray size changed:RuntimeWarning
     # ignore benign Cython warnings on ndarray size
