--- a/devtools/dev-requirements_conda.yml
+++ b/devtools/dev-requirements_conda.yml
@@ -5,7 +5,7 @@ dependencies:
   # standard install
   - colorama
   - h5py >= 3.0.0
-  - matplotlib >= 3.3.0, <= 3.6.0, != 3.4.3
+  - matplotlib >= 3.5.0, <= 3.7.2
   - mpmath >= 1.0.0
   - netcdf4 >= 1.5.4
   - numpy >= 1.20.0, < 1.25.0
