--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,8 @@ mpmath >= 1.0.0
 netcdf4 >= 1.5.4
 numpy >= 1.20.0, < 1.25.0
 nvgpu
+plotly >= 5.16, <= 6.0
 psutil
+pylatexenc >= 2.0, <= 3.0
 scipy >= 1.5.0, < 1.11.0
 termcolor
