--- a/.github/workflows/benchmark.yml
+++ b/.github/workflows/benchmark.yml
@@ -1,20 +1,20 @@
 name: Benchmarks
 
 on:
-  push:
   pull_request:
-    types: [labeled]
+    branches:
+      - master
     paths-ignore:
-      - 'tests/benchmarks/.benchmarks/**'
-      - 'tests/benchmarks/Figures/**'
-      - 'devtools/**'
       - 'docs/**'
+      - 'devtools/**'
   workflow_dispatch:
 
+concurrency:
+  group: ${{ github.workflow }}-${{ github.event.pull_request.number || github.ref }}
+  cancel-in-progress: true
 
 jobs:
   benchmark:
-    if: ${{ github.event.label.name == 'run_benchmarks' && github.event_name == 'pull_request' || github.event_name == 'workflow_dispatch' }}
     runs-on: ubuntu-latest
 
     steps:
@@ -34,18 +34,17 @@ jobs:
           pwd
           lscpu
           cd tests/benchmarks
-          python -m pytest benchmark_cpu_small.py --benchmark-save='Latest_Commit'
+          python -m pytest benchmark_cpu_small.py --benchmark-save='Latest_Commit' -vv --durations=0
       - name:  Checkout current master
-        uses: actions/checkout@v3
-        with:
-          ref: master
-          clean: false
+        run: |
+          git fetch origin master
+          git checkout origin/master -- desc
       - name: Benchmark with pytest-benchmark
         run: |
           pwd
           lscpu
           cd tests/benchmarks
-          python -m pytest benchmark_cpu_small.py --benchmark-save='master'
+          python -m pytest benchmark_cpu_small.py --benchmark-save='master' -vv --durations=0
       - name: put benchmark results in same folder
         run: |
           pwd
