allow deprecation warning in desc.compute._stability

--- a/setup.cfg
+++ b/setup.cfg
@@ -53,6 +53,7 @@ filterwarnings=
     # ignore benign Cython warnings on ndarray size
     ignore::DeprecationWarning:ml_dtypes.*
     # ignore benign ml_dtypes DeprecationWarning
+    ignore::DeprecationWarning:desc.compute._stability
 
 [flake8]
 # Primarily ignoring whitespace, indentation, and commenting etiquette that black does not catch
