Add option to compute each objective on specific devices

--- a/setup.cfg
+++ b/setup.cfg
@@ -53,6 +53,10 @@ filterwarnings=
     # ignore benign Cython warnings on ndarray size
     ignore::DeprecationWarning:ml_dtypes.*
     # ignore benign ml_dtypes DeprecationWarning
+env=
+    # pretend we have 2 jax devices for testing
+    D:JAX_PLATFORM_NAME=cpu
+    D:XLA_FLAGS=--xla_force_host_platform_device_count=2
 
 [flake8]
 # Primarily ignoring whitespace, indentation, and commenting etiquette that black does not catch
