--- a/devtools/dev-requirements_conda.yml
+++ b/devtools/dev-requirements_conda.yml
@@ -46,6 +46,7 @@ dependencies:
   - pytest >= 5.0.0
   - pytest-benchmark
   - pytest-cov >= 2.6.0
+  - pytest-env
   - pytest-monitor
   - pytest-mpl = 0.16.1
   - pytest-split
