Mark tests that run optimizations

--- a/setup.cfg
+++ b/setup.cfg
@@ -42,6 +42,7 @@ markers=
 	unit: marks small unit tests
 	regression: marks end to end regression tests
 	solve: marks tests that rely solving an equilibrium
+    optimize : marks tests that perform an optimization
 	slow: marks tests as slow (deselect with 'pytest -m "not slow"').
 	fast: mark tests as fast.
 filterwarnings=
