test: add markers to setup.cfp

--- a/setup.cfg
+++ b/setup.cfg
@@ -44,6 +44,8 @@ markers=
 	solve: marks tests that rely solving an equilibrium
 	slow: marks tests as slow (deselect with 'pytest -m "not slow"').
 	fast: mark tests as fast.
+    mirror_unit: marks small unit tests for straight mirror dev
+    mirror_regression: marks end to end regression tests
 filterwarnings=
     error
     ignore::pytest.PytestUnraisableExceptionWarning
