config: modify test markers description

--- a/setup.cfg
+++ b/setup.cfg
@@ -45,7 +45,7 @@ markers=
 	slow: marks tests as slow (deselect with 'pytest -m "not slow"').
 	fast: mark tests as fast.
     mirror_unit: marks small unit tests for straight mirror dev
-    mirror_regression: marks end to end regression tests
+    mirror_regression: marks end to end regression tests for straight mirror dev
 filterwarnings=
     error
     ignore::pytest.PytestUnraisableExceptionWarning
