--- a/setup.cfg
+++ b/setup.cfg
@@ -49,12 +49,14 @@ filterwarnings=
     error
     ignore::pytest.PytestUnraisableExceptionWarning
     ignore::RuntimeWarning:desc.compute
+    ignore::RuntimeWarning:desc.optimize
     # Ignore division by zero warnings.
     ignore::UserWarning
     ignore:numpy.ndarray size changed:RuntimeWarning
     # ignore benign Cython warnings on ndarray size
     ignore::DeprecationWarning:ml_dtypes.*
     # ignore benign ml_dtypes DeprecationWarning
+
 
 [flake8]
 # Primarily ignoring whitespace, indentation, and commenting etiquette that black does not catch
