--- a/setup.cfg
+++ b/setup.cfg
@@ -49,8 +49,9 @@ filterwarnings=
     error
     ignore::pytest.PytestUnraisableExceptionWarning
     ignore::RuntimeWarning:desc.compute
-    ignore::RuntimeWarning:desc.optimize
     # Ignore division by zero warnings.
+    ignore:tr_old / trust_radius:RuntimeWarning:desc.optimize
+    # Ignore warning when trust radius is set to infinite
     ignore:numpy.ndarray size changed:RuntimeWarning
     # ignore benign Cython warnings on ndarray size
     ignore::DeprecationWarning:ml_dtypes.*
