adjust warning ignore, add math to docstring, add warning for finite beta equilibria to run regcoil and quadratic flux

--- a/setup.cfg
+++ b/setup.cfg
@@ -49,9 +49,9 @@ filterwarnings=
     error
     ignore::pytest.PytestUnraisableExceptionWarning
     ignore::RuntimeWarning:desc.compute
-    # Ignore division by zero warnings.
-    ignore:tr_old / trust_radius:RuntimeWarning:desc.optimize
-    # Ignore warning when trust radius is set to infinite
+    # Ignore division by zero warnings
+    ignore:invalid value encountered in scalar divide:RuntimeWarning:desc.optimize
+    # Ignore division by inf warning when trust radius is set to infinite
     ignore:numpy.ndarray size changed:RuntimeWarning
     # ignore benign Cython warnings on ndarray size
     ignore::DeprecationWarning:ml_dtypes.*
