fix divide by 0 test, local pc doesnt throw error

--- a/setup.cfg
+++ b/setup.cfg
@@ -49,6 +49,7 @@ filterwarnings=
     error
     ignore::pytest.PytestUnraisableExceptionWarning
     ignore::RuntimeWarning:desc.compute
+    ignore::RuntimeWarning:tests.utils
     # Ignore division by zero warnings.
     ignore:numpy.ndarray size changed:RuntimeWarning
     # ignore benign Cython warnings on ndarray size
