--- a/devtools/dev-requirements_conda.yml
+++ b/devtools/dev-requirements_conda.yml
@@ -5,7 +5,7 @@ dependencies:
   # standard install
   - colorama
   - h5py >= 3.0.0
-  - matplotlib >= 3.5.0, <= 3.7.2
+  - matplotlib >= 3.5.0, < 4.0.0
   - mpmath >= 1.0.0
   - netcdf4 >= 1.5.4
   - numpy >= 1.20.0, < 1.25.0
@@ -15,10 +15,10 @@ dependencies:
   - pip
   - pip:
     - interpax
-    - jax[cpu] >= 0.3.2, <= 0.4.14
+    - jax[cpu] >= 0.3.2, < 0.5.0
     - nvgpu
-    - plotly >= 5.16, <= 6.0
-    - pylatexenc >= 2.0, <= 3.0
+    - plotly >= 5.16, < 6.0
+    - pylatexenc >= 2.0, < 3.0
     # testing and benchmarking
     - qsc
     - qicna @ git+https://github.com/rogeriojorge/pyQIC/
@@ -31,14 +31,14 @@ dependencies:
   - sphinx-copybutton
   - sphinx_rtd_theme >= 1.0, < 2.0
   - pip:
-    - sphinx-github-style >= 1.0, <= 1.1
+    - sphinx-github-style >= 1.0, < 2.0
 
   # linting
   - black = 22.10.0
-  - flake8 >= 5.0.0, <=6.0.0
-  - flake8-docstrings >= 1.0.0, <=2.0.0
-  - flake8-eradicate >= 1.0.0, <=2.0.0
-  - flake8-isort >=5.0.0, <= 6.0.0
+  - flake8 >= 5.0.0, <6.0.0
+  - flake8-docstrings >= 1.0.0, <2.0.0
+  - flake8-eradicate >= 1.0.0, <2.0.0
+  - flake8-isort >=5.0.0, < 6.0.0
   - pre-commit
 
   # testing and benchmarking
