add _xsection not loaded exception

--- a/setup.cfg
+++ b/setup.cfg
@@ -48,6 +48,7 @@ markers=
 filterwarnings=
     error
     ignore::pytest.PytestUnraisableExceptionWarning
+    ignore:Save attribute '_xsection' was not loaded.:RuntimeWarning
     ignore::RuntimeWarning:desc.compute
     # Ignore division by zero warnings.
     ignore:numpy.ndarray size changed:RuntimeWarning
