--- a/requirements_conda.yml
+++ b/requirements_conda.yml
@@ -4,17 +4,16 @@ dependencies:
   - colorama
   - h5py >= 3.0.0
   - matplotlib >= 3.5.0, < 4.0.0
-  - mpmath >= 1.0.0
-  - netcdf4 >= 1.5.4
+  - mpmath >= 1.0.0, < 2.0
+  - netcdf4 >= 1.5.4, < 2.0
   - numpy >= 1.20.0, < 2.0
   - psutil
-
-  - scipy >= 1.5.0, < 2.0
+  - scipy >= 1.7.0, < 2.0
   - termcolor
   - pip
   - pip:
     - interpax
     - jax[cpu] >= 0.3.2, < 0.5.0
     - nvgpu
-    - plotly >= 5.16, <= 6.0
+    - plotly >= 5.16, < 6.0
     - pylatexenc >= 2.0, < 3.0
