--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -12,6 +12,7 @@ repos:
       - id: detect-private-key
       - id: end-of-file-fixer
       - id: trailing-whitespace
+      - id: no-commit-to-branch
   - repo: https://github.com/pycqa/isort
     rev: 5.12.0
     hooks:
