Add pytest-xdist to further parallelize tests

--- a/.github/workflows/nbtests.yml
+++ b/.github/workflows/nbtests.yml
@@ -39,6 +39,7 @@ jobs:
           lscpu
           export PYTHONPATH=$(pwd)
           pytest -v --nbmake "./docs/notebooks" \
+            -n auto \
             --nbmake-timeout=1000 \
             --ignore=./docs/notebooks/zernike_eval.ipynb \
             --splits 2 \
