--- a/.github/workflows/regression_test.yml
+++ b/.github/workflows/regression_test.yml
@@ -43,6 +43,7 @@ jobs:
           pwd
           lscpu
           python -m pytest -v -m regression \
+            -n auto \
             --durations=0 \
             --cov-report xml:cov.xml \
             --cov-config=setup.cfg \
