--- a/.github/workflows/unittest.yml
+++ b/.github/workflows/unittest.yml
@@ -45,6 +45,7 @@ jobs:
           pwd
           lscpu
           python -m pytest -v -m unit \
+            -n auto \
             --durations=0 \
             --cov-report xml:cov.xml \
             --cov-config=setup.cfg \
