Try to get xdist to play nice with cov

--- a/setup.cfg
+++ b/setup.cfg
@@ -48,10 +48,12 @@ markers=
 filterwarnings=
     error
     ignore::pytest.PytestUnraisableExceptionWarning
-    ignore:numpy.ndarray size changed:RuntimeWarning
+    # ignore this until pytest-cov plays nice with pytest-xdist
+    ignore:The --rsyncdir command line argument and rsyncdirs config variable are deprecated.:DeprecationWarning
     # ignore benign Cython warnings on ndarray size
-    ignore::DeprecationWarning:ml_dtypes.*
+    ignore:numpy.ndarray size changed:RuntimeWarning
     # ignore benign ml_dtypes DeprecationWarning
+    ignore::DeprecationWarning:ml_dtypes.*
 
 [flake8]
 # Primarily ignoring whitespace, indentation, and commenting etiquette that black does not catch
