--- a/.github/workflows/regression_test.yml
+++ b/.github/workflows/regression_test.yml
@@ -52,7 +52,7 @@ jobs:
             --mpl-generate-summary=html \
             --splits 6 \
             --group ${{ matrix.group }} \
-            --splitting-algorithm least_duration \
+            --splitting-algorithm duration_based_chunks \
             --db ./prof.db
       - name: save coverage file and plot comparison results
         if: always()
