--- a/.github/workflows/unittest.yml
+++ b/.github/workflows/unittest.yml
@@ -54,7 +54,7 @@ jobs:
             --mpl-generate-summary=html \
             --splits 4 \
             --group ${{ matrix.combos.group }} \
-            --splitting-algorithm least_duration \
+            --splitting-algorithm duration_based_chunks \
             --db ./prof.db
       - name: save coverage file and plot comparison results
         if: always()
