--- a/setup.cfg
+++ b/setup.cfg
@@ -25,6 +25,7 @@ omit =
      desc/examples/precise_QH.py
      desc/examples/precise_QA.py
      desc/examples/regenerate_all_equilibria.py
+     devtools/update_all_equilibria_backwards_compatibility.py
 
 [coverage:report]
 # Regexes for lines to exclude from consideration
